# sdl_shenanigans

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  unnamed
levels/: level1.txt
src/: animation.cpp  animation.h  debug.h  drawing.h  entity.cpp  entity.h  hero.cpp  hero.h  level.cpp  levels.h  main.cpp  sprite_sheet.cpp
src/animations/: animation.h  sprite_sheet.h
